# AI_Travel_Planner

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.local  README.md  build.sh  docker-compose.yml  nginx.conf  run.sh  start.sh  start_dev.sh  开发计划.md  要求.md  阶段二-后端API服务.md  阶段四-第三方API集成.md
backend/: .env.example  create_tables.py  pseudo_client4test.py  pyproject.toml
backend/app/: __init__.py  auth.py  crypto.py  database.py  main.py  middleware.py  models.py  schemas.py  srp_auth.py
backend/app/routers/: auth.py  speech.py  trips.py  users.py
backend/app/utils/: srp_dataType.py
dev_plan/: 开发计划.md  要求.md  阶段一-项目基础架构.md  阶段三-前端用户界面.md  阶段二-后端API服务.md  阶段五-核心业务逻辑.md  阶段六-测试与部署.md  阶段四-第三方API集成.md
docs/: SRP认证机制说明.md  后端API文档.md  行程JSON结构说明.md  项目结构说明.md
docs/dsrp/: dsrp
frontend/: .env.example  DEPLOYMENT.md  README.md  README_账号功能.md  index.html  package-lock.json  package.json  pubspec.yaml  run_debug.sh  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  Layout.tsx  MapComponent.tsx  Sidebar.tsx  SpeechInput.tsx
frontend/src/config/: routes.ts
frontend/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/chat/: ChatPage.tsx
frontend/src/services/: authService.ts  leafletService.ts  llmService.ts  speechService.ts  tripService.ts  userService.ts
frontend/src/stores/: authStore.ts
frontend/src/types/: index.ts
frontend/test/: ai_response_validator_test.dart  crypto_test.dart
frontend/web/: index.html
frontend/web/js/: amap_bridge.js
(+6 files in other folders)
